syntax = "proto3";

package ${package}.domain;

import "akkaserverless/annotations.proto";

option java_outer_classname = "CounterDomain";

option (akkaserverless.file).event_sourced_entity = {
    name: "Counter"
    entity_type: "counter"
    state: "CounterState"
    events: ["ValueSet"]
};

message CounterState {
    int32 value = 1;
}

message ValueSet {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    int32 value = 2;
}
